--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <!-- Skip to content untuk aksesibilitas -->
-      <a href="#main-content" class="skip-link">Lewati ke konten</a>
+      <a href="#" class="skip-link">Lewati ke konten</a>
 
       <div class="main-header container">
         <a class="brand-name" href="#/">
